# final-countdown

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  about.hbs  about.toml  build.rs  deny.toml  fly.toml  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: audit.yaml  ci.yaml  deploy.yaml
assets/: countdown.html  new.html  site.webmanifest
src/: files.rs  locales.rs  main.rs  pages.rs  types.rs
