[package]
name = "final-countdown"
version = "0.1.0"
edition = "2021"
authors = ["janm-dev"]
categories = [
	"date-and-time",
	"web-programming::http-server",
]
description = "A simple timer webapp with emphasis on internationalization"
homepage = "https://countdown.janm.dev/"
keywords = ["countdown", "timer"]
license = "AGPL-3.0-or-later"
rust-version = "1.72"

[features]
default = ["http1", "http2"]
# Enable HTTP/1.0 and HTTP/1.1 support
http1 = ["axum/http1"]
# Enable HTTP/2 support
http2 = ["axum/http2"]
# Generate time unit data for only a few locales (not recommended)
few-time-units = []

[dependencies]
accept-language = "3.1.0"
aho-corasick = "1.1.3"
axum = { version = "0.8.1", features = [
	"json",
	"macros",
	"query",
	"tokio",
	"tower-log",
	"tracing",
], default-features = false }
chrono = "0.4.40"
cookie = "0.18.1"
html-escape = "0.2.13"
icu = { version = "1.5.0", features = ["std"] }
litemap = "0.7.5"
phf = "0.11.3"
rand = "0.9.0"
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41", features = [
	"release_max_level_debug",
	"log",
] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.15.1", features = ["v4"] }
zerovec = "0.11.1"

[build-dependencies]
copy_dir = "0.1.3"
phf = "0.11.3"
phf_codegen = "0.11.3"
reqwest = { version = "0.12.12", features = ["blocking"] }
serde_json = "1.0.140"
zip-extract = "0.2.1"
prettyplease = "0.2.29"
syn = { version = "2.0.99", default-features = false, features = [
	"full",
	"parsing",
] }
minify-html = "0.15.0"

[profile.release]
opt-level = "s"
overflow-checks = false
debug = true
split-debuginfo = "packed"
strip = true
lto = "fat"
incremental = false
codegen-units = 1
